Import test cases - reimplementation as per new requirements